# jj_tui

./: .gitignore  AGENTS.md  CHANGES_SUMMARY.md  LICENSE  README.md  design.md  dockerfile  dune  dune-project  dune-workspace  flake-old.nix  flake.nix  jj_tui.install  jj_tui.opam  jj_tui.opam.locked  jj_tui.opam.template  log  out  perf.data  perf.data.old  result  test  test.js  test_render.ml  todo.md
.github/workflows/: build-nix.yaml  build-nix.yml  main.yml
.planning/: PROJECT.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.sisyphus/: boulder.json
.sisyphus/notepads/integrate-graph-renderer/: learnings.md
.sisyphus/plans/: integrate-graph-renderer.md  jj-graph-renderer.md
bup/: flake.nix
docs/: jj_rebase.md  jj_template.md  jj_templating.md  renderdagsrc.md
dune.lock/: backoff.0.1.1.pkg  base_quickcheck.v0.17.1.pkg  bin_prot.v0.17.0-1.pkg  bos.0.2.1.pkg  capitalization.v0.17.0.pkg  cbor.0.5.pkg  containers.3.18.pkg  dune-configurator.3.21.1.pkg  dune-configurator.3.22.1.pkg  either.1.0.0.pkg  fieldslib.v0.17.0.pkg  fmt.0.11.0.pkg  fpath.0.7.3.pkg  lock.dune  logs-ppx.0.2.0.pkg  logs.0.10.0.pkg  lwt.6.1.1.pkg  mtime.2.1.0.pkg  multicore-magic.2.3.2.pkg  ocaml-base-compiler.5.4.1.pkg  ocaml-compiler.5.4.1.pkg  ocaml-config.3.pkg  ocaml.5.4.1.pkg  parsexp.v0.17.0.pkg  picos.0.6.0.pkg  picos_aux.0.6.0.pkg  picos_io.0.6.0.pkg  picos_mux.0.6.0.pkg  picos_std.0.6.0.pkg  ppx_bench.v0.17.1.pkg  ppx_bin_prot.v0.17.1.pkg  ppx_custom_printf.v0.17.0.pkg  ppx_deriving.6.1.1.pkg  ppx_deriving_yaml.0.4.1.pkg  ppx_deriving_yojson.3.10.0.pkg  ppx_disable_unused_warnings.v0.17.0.pkg  ppx_expect.v0.17.3.pkg  ppx_fields_conv.v0.17.0.pkg  ppx_fixed_literal.v0.17.0.pkg  ppx_ignore_instrumentation.v0.17.0.pkg  (+33 more)
eio-process/: LICENSE  LICENSE.eio  LICENSE.janestreet  Makefile  README.md  dune-project  eio-process.opam
eio-process/src/: eio_process.mli
eio-process/test/: test__eio_process.ml
forks/eio-process/: .gitattributes  .gitignore  CHANGES.md  LICENSE  dune-project  eio-process.opam
forks/eio-process/.git_/: config  index  packed-refs
forks/eio-process/.git_/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
forks/eio-process/.git_/logs/refs/heads/: main
forks/eio-process/.git_/objects/pack/: pack-40529e2a2816157ff8ee26ff8d9016d33aba5925.idx  pack-40529e2a2816157ff8ee26ff8d9016d33aba5925.pack  pack-40529e2a2816157ff8ee26ff8d9016d33aba5925.rev
forks/eio-process/.git_/refs/heads/: main
forks/eio-process/.github/workflows/: ci.yml
forks/eio-process/src/: dune  eio_process.ml
forks/eio-process/test/: dune
forks/lwd/: .gitignore  dune-project  flake.nix  lwd.opam  lwd_picos.opam  lwd_stdlib.opam  making multithreaded.md
forks/lwd/lib/lwd/: custom_mutex.ml  dune  lwd.ml  lwd.mli  lwd_impl.ml  lwd_infix.ml  lwd_infix.mli  mutex_backend.ml  mutex_stdlib.ml
forks/lwd/lib/lwd_picos/: dune  lwd.ml  lwd.mli  mutex_picos.ml  mutex_picos.mli
forks/lwd/lib/lwd_stdlib/: dune  lwd.ml  mutex_stdlib.ml
forks/lwd/lib/nottui/: nottui.ml  nottui.mli  nottui_widgets.ml  nottui_widgets.mli
forks/nottui/: .gitignore  .ocamlformat  Makefile  README.md  dune  dune-project  flake.nix  nottui-lwt.opam  nottui-pretty.opam  nottui.opam  nottui.opam.template  nottui_picos.opam
forks/nottui/docs/: async.md  docs.md  fundimentals.md  lwd_bind.md
forks/nottui/examples/: minimal.ml  misc.ml  pretty.ml  reranger.ml  stress.ml
forks/nottui/lib/nottui/: README.md  dune  nottui.ml  nottui_main.ml  nottui_main.mli
forks/nottui/lib/nottui-lwt/: nottui_lwt.ml  nottui_lwt.mli
forks/nottui/lib/nottui-pretty/: nottui_pretty.ml
forks/nottui/lib/nottui/widgets/: Shared.ml  border_box.ml  border_box.mli  lists.ml  lists.mli  nottui_widgets.ml  nottui_widgets.mli  old.ml  overlays.ml  overlays.mli  scroll.ml  scroll.mli  selection_list.ml  selection_list.mli  widgets.ml  wip.ml
forks/nottui/lib/nottui_picos/: async_widgets.ml  dune  nottui_picos.ml  nottui_picos.mli
forks/nottui/tutorial/hackernews/: tutorial.md
forks/nottui/tutorial/src/: build_tutorial.sh  dune  tangle.ml
forks/notty/: dune-project  flake.nix  notty.opam
forks/notty/.github/workflows/: build.yml
forks/notty/src/: notty.ml  notty.mli
forks/notty/src-unix/: dune
jj_tui/: .ocamlformat  dune  dune-project  flake.nix  log  log2  log3  todo.norg
jj_tui/lib/: ansiReverse.ml  ansiReverseTests.ml  box_widget.ml  commit_render.ml  commit_render_tests.ml  config.ml  debounce.ml  dune  graph_row_layout.ml  jj_cli.ml  jj_cli_tests.ml  jj_json.ml  jj_json_tests.ml  key.ml  key_map.ml  logging.ml  os.ml  outputParsing.ml  process.ml  process_wrappers.ml  render_jj_graph.ml  render_jj_graph_tests.ml  util.ml  widgets.ml  widgets_citty.ml
jj_tui/lib/test/: jj_log.json
jj_tui/lib/widgets/: Shared.ml  Shared.ml-  border_box.ml-  selection_list.ml  widgets.ml  widgets.ml-  wip.ml
jj_tui/test/: dune
jj_tui/test/lib/: ansi.ml  dune  graph_row_grouping.ml
jj_tui/testing/: hi  log  new  oplog  out  prev
jj_tui/testing/other/: file
jj_tui/widget-test/: dune  main.ml
lib/: dune  process.ml
notty/src/: notty.ml
onix/: flake.nix
scripts/: template-test.sh  update_render_jj_graph_test_data.sh
test/: dune  jj_log.json
widget-test/: main.ml
