(include_subdirs unqualified)

(library
 (name jj_tui)
 (inline_tests)
 (libraries
  stdio
  notty
  nottui_picos
  angstrom
  bigstringaf
  picos_std.sync
  picos_std.finally
  picos_std.structured
  logs
  re
  yojson
  yaml
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps
   ppx_expect
   logs-ppx
   ppx_deriving.std
   ppx_deriving_yojson
   ppx_deriving_yaml
   ppx_record_updater)))
