(library
 (name lwd)
 (public_name lwd)
 (modules lwd lwd_impl lwd_seq lwd_table lwd_infix lwd_utils  mutex_backend )
 (virtual_modules lwd)
;  (default_implementation lwd_stdlib)
 (libraries seq logs)
 (inline_tests
  (backend qtest.lib)
  (executable
   (flags
    (-w -33))))
 (wrapped false)
 (preprocess
  (per_module
   ((action
     (run %{dep:pp.exe} %{input-file}))
    lwd_infix
    lwd_seq))))

(executable
 (name pp)
 (modules pp))
